--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "description": "A simple slideshow framework.",
   "license": "MIT",
-  "dependencies": {
-    "animate.css": "~3.2.6"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "animate.css": "~3.2.6",
     "mocha": "~2.2.4",
     "chai": "~2.2.0",
     "chai-as-promised": "~4.3.2"
