--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "Slideshow",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A simple slideshow framework.",
   "license": "MIT",
   "dependencies": {},
@@ -21,8 +21,7 @@
     "**/.*",
     "node_modules",
     "_component",
-    "build",
-    "test"
+    "build"
   ],
   "keywords": [
     "slideshow"
